--- a/Calculadora/nbproject/project.properties
+++ b/Calculadora/nbproject/project.properties
@@ -1,6 +1,6 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
+annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_factory=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -30,15 +30,40 @@ dist.jar=${dist.dir}/Calculadora.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.antlr-2.7.7.jar=C:\\Users\\04646777266\\Documents\\NetBeansProjects\\3b_grupo1\\Grupo1\\lib\\antlr-2.7.7.jar
+file.reference.classmate-1.3.0.jar=C:\\Users\\04646777266\\Documents\\NetBeansProjects\\3b_grupo1\\Grupo1\\lib\\classmate-1.3.0.jar
+file.reference.controlsfx-8.40.14.jar=C:\\Users\\04646777266\\Documents\\NetBeansProjects\\3b_grupo1\\Grupo1\\lib\\controlsfx-8.40.14.jar
+file.reference.dom4j-1.6.1.jar=C:\\Users\\04646777266\\Documents\\NetBeansProjects\\3b_grupo1\\Grupo1\\lib\\dom4j-1.6.1.jar
+file.reference.hibernate-commons-annotations-5.0.1.Final.jar=C:\\Users\\04646777266\\Documents\\NetBeansProjects\\3b_grupo1\\Grupo1\\lib\\hibernate-commons-annotations-5.0.1.Final.jar
+file.reference.hibernate-core-5.2.16.Final.jar=C:\\Users\\04646777266\\Documents\\NetBeansProjects\\3b_grupo1\\Grupo1\\lib\\hibernate-core-5.2.16.Final.jar
+file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar=C:\\Users\\04646777266\\Documents\\NetBeansProjects\\3b_grupo1\\Grupo1\\lib\\hibernate-jpa-2.1-api-1.0.0.Final.jar
+file.reference.jandex-2.0.3.Final.jar=C:\\Users\\04646777266\\Documents\\NetBeansProjects\\3b_grupo1\\Grupo1\\lib\\jandex-2.0.3.Final.jar
+file.reference.javassist-3.22.0-GA.jar=C:\\Users\\04646777266\\Documents\\NetBeansProjects\\3b_grupo1\\Grupo1\\lib\\javassist-3.22.0-GA.jar
+file.reference.jboss-logging-3.3.1.Final.jar=C:\\Users\\04646777266\\Documents\\NetBeansProjects\\3b_grupo1\\Grupo1\\lib\\jboss-logging-3.3.1.Final.jar
+file.reference.jboss-transaction-api_1.2_spec-1.0.1.Final.jar=C:\\Users\\04646777266\\Documents\\NetBeansProjects\\3b_grupo1\\Grupo1\\lib\\jboss-transaction-api_1.2_spec-1.0.1.Final.jar
+file.reference.mysql-connector-java-5.1.46.jar=C:\\Users\\04646777266\\Documents\\NetBeansProjects\\3b_grupo1\\Grupo1\\lib\\mysql-connector-java-5.1.46.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
-    ${javafx.classpath.extension}
+    ${javafx.classpath.extension}:\
+    ${file.reference.antlr-2.7.7.jar}:\
+    ${file.reference.classmate-1.3.0.jar}:\
+    ${file.reference.controlsfx-8.40.14.jar}:\
+    ${file.reference.dom4j-1.6.1.jar}:\
+    ${file.reference.hibernate-commons-annotations-5.0.1.Final.jar}:\
+    ${file.reference.hibernate-core-5.2.16.Final.jar}:\
+    ${file.reference.hibernate-jpa-2.1-api-1.0.0.Final.jar}:\
+    ${file.reference.jandex-2.0.3.Final.jar}:\
+    ${file.reference.javassist-3.22.0-GA.jar}:\
+    ${file.reference.jboss-logging-3.3.1.Final.jar}:\
+    ${file.reference.jboss-transaction-api_1.2_spec-1.0.1.Final.jar}:\
+    ${file.reference.mysql-connector-java-5.1.46.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.processorpath=\
     ${javac.classpath}
 javac.source=1.8
@@ -100,6 +125,7 @@ manifest.custom.codebase=*
 manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 run.classpath=\
     ${dist.jar}:\
